--- a/src/Styles/components.css
+++ b/src/Styles/components.css
@@ -1,1 +1,10 @@
-@import "./Components/button.css"
+@import "./Components/button.css";
+@import "./Components/header.css";
+@import "./Components//colors.css";
+@import "./Components/countries.css";
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap');
+body{
+    font-family: 'Nunito Sans', sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    
+}
+
