--- a/src/Styles/components.css
+++ b/src/Styles/components.css
@@ -2,6 +2,7 @@
 @import "./Components/header.css";
 @import "./Components//colors.css";
 @import "./Components/countries.css";
+@import "./Components/country-card.css";
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap');
 body{
     font-family: 'Nunito Sans', sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
